# publishing-python-packages

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ch07-packaging.yml  ch08-packaging.yml  codeql-analysis.yml
ch03/first-python-package/: LICENSE  setup.cfg
ch04/first-python-package/: setup.cfg
ch04/first-python-package/src/imppkg/: harmonic_mean.pyx
ch05/first-python-package/: setup.cfg
ch05/first-python-package/src/imppkg/: harmony.py
ch05/first-python-package/test/: test_harmonic_mean.py
ch06/first-python-package/: pyproject.toml  setup.cfg
ch06/first-python-package/src/imppkg/: harmonic_mean.pyx  harmony.py
ch07/first-python-package/: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  test-file.txt
ch07/first-python-package/src/imppkg/: harmony.py
ch08/first-python-package/: .readthedocs.yml  LICENSE  setup.cfg
ch08/first-python-package/docs/: conf.py  index.rst
ch08/first-python-package/src/imppkg/: harmonic_mean.pyx  harmony.py
ch09/first-python-package/: .gitignore  MANIFEST.in  setup.cfg
ch09/first-python-package/docs/: index.rst
ch09/first-python-package/src/imppkg/: harmony.py
ch10/python-package-template/: cookiecutter.json
ch10/python-package-template/{{cookiecutter.package_distribution_name}}/: LICENSE  README.md  pyproject.toml  setup.cfg
ch10/python-package-template/{{cookiecutter.package_distribution_name}}/docs/: conf.py  index.rst
ch10/python-package-template/{{cookiecutter.package_distribution_name}}/test/: test_{{cookiecutter.package_import_name}}.py
